--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/spotlight": "^8.1.0",
     "@mantinex/mantine-logo": "^2.0.0",
     "@tabler/icons-react": "^3.34.0",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
